updated radio picture in radio edit

--- a/yaapp/templates/yabase/app/radio/editRadioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/editRadioPage.mustache
@@ -10,7 +10,7 @@
                     <span>Ajouter une photo</span>
                     <input type="file" name="picture" data-url="/api/v1/radio/{{ radio.uuid }}/picture/" id='file-upload'/>
                 </div>
-                <div class='settings-picture'>
+                <div class='settings-picture-square'>
                     <img src='{{ radio.picture_url }}' id='radio-picture-image'/>
                 </div>
             </div>
