--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2504,6 +2504,22 @@ ul .radio-with-stats-cells li {
     right:120px;
 }
 
+.upload-container img {
+    border-radius: 50px;
+}
+
+.upload-container .settings-picture {
+    position:absolute;
+    left:30px;
+    top:24px;
+    width:100px;
+    height:100;
+    border:4px solid white;
+    border-radius:50%;
+    box-shadow: 0px 0px 5px #7b7b7b, inset 1px 1px -5px #7b7b7b;
+    margin-right:40px;
+}
+
 /**
  * radio edit
  */
@@ -2518,9 +2534,6 @@ ul .radio-with-stats-cells li {
     margin-bottom:25px;
 }
 
-.upload-container img {
-    border-radius: 50px;
-}
 
 .upload-container .upload-content {
     font-size: 17px;
@@ -2544,14 +2557,16 @@ ul .radio-with-stats-cells li {
     cursor: pointer;
 }
 
-.upload-container .settings-picture {
+.upload-container #radio-picture-image {
+    border-radius:0;
+}
+
+.upload-container .settings-picture-square {
     position:absolute;
     left:30px;
-    top:24px;
+    top:27px;
     width:100px;
     height:100;
-    border:4px solid white;
-    border-radius:50%;
     box-shadow: 0px 0px 5px #7b7b7b, inset 1px 1px -5px #7b7b7b;
     margin-right:40px;
 }
