--- a/yaapp/templates/yabase/app/programming/upload.mustache
+++ b/yaapp/templates/yabase/app/programming/upload.mustache
@@ -2,7 +2,10 @@
 <div>
     <input id="file-upload" type="file" name="song" data-url="/api/v1/upload_song/" multiple>
 
-    <button class='yabutton-small' id='start-all-btn'>{% trans "Start all" %}</button>
+    <div class="btn-group">
+        <button class='yabutton-small left' id='start-all-btn'>{% trans "Start all" %}</button>
+        <button class='yabutton-small left' id='remove-all-btn'>{% trans "Remove all" %}</button>
+    </div>
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
