--- a/yaapp/templates/yabase/app/programming/upload.mustache
+++ b/yaapp/templates/yabase/app/programming/upload.mustache
@@ -9,9 +9,9 @@
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
-                <th>{% trans "Filename" %}</th>
-                <th>{% trans "Status" %}</th>
-                <th>{% trans "Action" %}</th>
+                <th style="width: 40%">{% trans "Filename" %}</th>
+                <th style="width: 20%">{% trans "Progress" %}</th>
+                <th style="width: 40%">{% trans "Action" %}</th>
             </tr>
         </thead>
         <tbody id='upload-table'>
