--- a/yaapp/templates/yabase/app/programming/importFromItunes.mustache
+++ b/yaapp/templates/yabase/app/programming/importFromItunes.mustache
@@ -2,6 +2,7 @@
 <form id='programming-import-itunes' enctype="multipart/form-data" class='form-horizontal well' method='post'>{% csrf_token %}
     {{ import_itunes_form }}
     <div class="form-actions">
+        <input type='hidden' name='uuid' value='<% uuid %>'/>
         <input type='hidden' name='action' value='import_itunes'/>
         <button type="submit" name='save' class="btn btn-primary">{% trans "Send" %}</button>
     </div>
