--- a/yaapp/templates/yabase/app/radio/editRadioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/editRadioPage.mustache
@@ -7,7 +7,7 @@
         <div class='settings-content-container'>
             <div class='upload-container'>
                 <div class='upload-content yabutton-small'>
-                    <span>Ajouter une photo</span>
+                    <span>{% trans "Upload photo" %}</span>
                     <input type="file" name="picture" data-url="/api/v1/radio/{{ radio.uuid }}/picture/" id='file-upload'/>
                 </div>
                 <div class='settings-picture-square'>
