--- a/yaapp/templates/yabase/app/settings/settingsPage.mustache
+++ b/yaapp/templates/yabase/app/settings/settingsPage.mustache
@@ -103,8 +103,8 @@
 
                 <div id='my-informations'>
                     <div class='upload-container'>
-                        <div class='upload-content yabutton-small'>   
-                            <span>Ajouter une photo</span> 
+                        <div class='upload-content yabutton-small'>
+                            <span>{% trans "Upload photo" %}</span>
                             <input type="file" name="picture" data-url="/api/v1/user/{{ request.user.username }}/picture/" id='file-upload'/>
                         </div>
                         <div class='settings-picture'>
@@ -114,6 +114,21 @@
                     <div id='progress' class="progress progress-striped active">
                       <div class="bar"></div>
                     </div>
+
+                    <div class="modal hide fade" id="modal-upload-error">
+                        <div class="modal-header">
+                            <button class="close" data-dismiss="modal">×</button>
+                            <h3>{% trans "Upload error" %}</h3>
+                        </div>
+                        <div class="modal-body">
+                            <p>
+                            </p>
+                        </div>
+                        <div class="modal-footer">
+                            <a href="#" class="btn" data-dismiss="modal">{% trans "Close" %}</a>
+                        </div>
+                    </div>
+
 
                     <form id='my-informations' enctype="multipart/form-data" class='' method='post'>{% csrf_token %}
                         {{ my_informations_form }}
