updated error messages form

--- a/yaapp/media/js/colibri/colibri.css
+++ b/yaapp/media/js/colibri/colibri.css
@@ -36,9 +36,9 @@
 }
 
 .colibri-warning {
-	color: #C09853;
+	color: #f85e5e;
 	background-color: #FCF8E3;
-	border-color: #FBEED5;
+	border-color: #f85e5e;
 }
 
 .colibri-tooltip {
