--- a/yaapp/templates/yabase/app/notifications/notification.mustache
+++ b/yaapp/templates/yabase/app/notifications/notification.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class='notification-container'>
-	<div class='notifications-heart'></div>
+	<div class='<% type %>'></div>
 	<a class="close-icon" data-dismiss="alert" href="#"></a>
-	<div class='date'><% formatted_date %></div> 
+	<div class='date'><% formatted_date %></div>
 	<div class='<%#read%>read<%/read%> text-notification'><% text %></div>
 </div>
