fixed firefox issue with connected users in footer

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -445,11 +445,11 @@
 			<p id="text-users">
 				{% trans "Connected users" %}
 			</p>
-			<p id="img-users">
+			<div id="img-users">
 				<a href="#" id="footer-button">
 				    <span id="footer-button-text">{% trans "See all" %}</span>
 				</a>
-			</p>
+			</div>
 		</div>
 		<div class="footer-separation">
 			<img src="/media/app/images/separation.png" width="4" height="81" alt="separation"/>
