--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -1267,15 +1267,15 @@ input::-webkit-input-placeholder {
 
 #connected-users {
     float:left;
-    width: 436px;
+    width: 443px;
     height: 82px;
-    margin: 40px 54px 0px 35px;
+    margin: 30px 54px 0px 35px;
 	position:relative;
 }
 
 
 #text-users {
-    display:inline-block;
+    display:block;
     float:left;
     color:#757b7d;
     font-size:14px;
@@ -1284,14 +1284,17 @@ input::-webkit-input-placeholder {
 }
 
 #img-users {
-    width:340px;
-    display:inline-block;
-    padding-left:20px;
-    padding-top:5px;
+    display:block;
+    margin-left:20px;
+    margin-top:5px;
 }
 
 #img-users span {
-    padding: 0px 5px 9px 0px;
+    display:block;
+    float:left;
+    margin-bottom:10px;
+    margin-right:8px;
+    text-align:center;
 }
 
 #img-users .individual-pictures {
@@ -1321,9 +1324,10 @@ input::-webkit-input-placeholder {
     border-radius:4px;
     text-align:center;
     color:#8d9699;
+    text-align:center;
     position:absolute;
-    bottom:0px;
-	left:300px;
+    bottom:-7px;
+	right:15px ;
 
     -webkit-box-shadow:0px 1px 2px #1a1c1d, 0px 1px 1px #4f5252 inset;
     -moz-box-shadow:0px 1px 2px #1a1c1d, 0px 1px 1px #4f5252 inset;
@@ -1337,6 +1341,12 @@ input::-webkit-input-placeholder {
     box-shadow:0px 1px 5px #000, 0px 1px 1px #4f5252 inset;
 }
 
+#footer-button-text {
+    display:block;
+    height:30px;
+    width:113px;
+    text-align:center;
+}
 
 #footer-button span {
     display:inline-block;
