updated notification width

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -1865,6 +1865,7 @@ ul#notifications {
 .notification-container .text-notification {
     position:absolute;
     top:25px;
+    width:300px;
     font-size:17px;
     color:#434343;
     font-weight: normal;
