updated button workflow on programming page (import from desktop)

--- a/yaapp/templates/yabase/app/programming/upload.mustache
+++ b/yaapp/templates/yabase/app/programming/upload.mustache
@@ -3,8 +3,8 @@
     <input id="file-upload" type="file" name="song" data-url="/api/v1/upload_song/" multiple>
 
     <div class="btn-group">
-        <button class='yabutton-small left' id='start-all-btn'>{% trans "Start all" %}</button>
-        <button class='yabutton-small left' id='remove-all-btn'>{% trans "Remove all" %}</button>
+        <button class='yabutton-small left hide' id='start-all-btn'>{% trans "Start all" %}</button>
+        <button class='yabutton-small left hide' id='remove-all-btn'>{% trans "Remove all" %}</button>
     </div>
     <table class="table table-bordered table-striped">
         <thead>
