--- a/yaapp/templates/yabase/app/programming/uploadCell.mustache
+++ b/yaapp/templates/yabase/app/programming/uploadCell.mustache
@@ -7,6 +7,6 @@
 </td>
 <td>
     <button class='yabutton-small left' id='start'>{% trans 'start' %}</button>
-    <button class='yabutton-small left' id='stop'>{% trans 'abort' %}</button>
+    <button class='yabutton-small left hide' id='stop'>{% trans 'abort' %}</button>
     <button class='yabutton-small left' id='remove'>{% trans 'remove' %}</button>
 </td>
