improved programming (import from desktop) page

--- a/yaapp/templates/yabase/app/programming/upload.mustache
+++ b/yaapp/templates/yabase/app/programming/upload.mustache
@@ -4,6 +4,7 @@
 
     <div class="btn-group">
         <button class='yabutton-small left hide' id='start-all-btn'>{% trans "Start all" %}</button>
+        <button class='yabutton-small left hide' id='stop-all-btn'>{% trans "Stop all" %}</button>
         <button class='yabutton-small left hide' id='remove-all-btn'>{% trans "Remove all" %}</button>
     </div>
     <table class="table table-bordered table-striped">
