--- a/yaapp/templates/yabase/app/radio/wallEvent.like.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.like.mustache
@@ -6,5 +6,7 @@
 	</div>
 	<p><% text %></p>
 	<div class='date date-comment'><% formatted_start_date %></div>
-	<div class='clear'></div>
+	<div class='wall-event-remove'>
+		<button class='yabutton-small wall-delete' href="#">delete</button>
+	</div>
 </div>
