--- a/yaapp/templates/yabase/app/radio/wallEvent.message.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.message.mustache
@@ -4,5 +4,8 @@
 <h2><a href='/app/profile/<% user_username %>/'><% user_name %></a></h2>
 <p><% text %></p>
 <div class='date'><% formatted_start_date %></div>
-<div class='clear'></div>
+<div class='wall-event-remove'>
+	<button class='yabutton-small' href="#">report as spam</button>
+	<button class='yabutton-small wall-delete' href="#">delete</button>
+</div>
 </div>
