--- a/yaapp/templates/yabase/app/radio/wallEvent.song.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.song.mustache
@@ -5,6 +5,8 @@
         <h2><% song_name %> <% song_album %> <% song_artist %></h2>
         <p><% text %></p>
         <div class='date date-comment'><% formatted_start_date %></div>
-        <div class='clear'></div>
+        <div class='wall-event-remove'>
+        	<button class='yabutton-small wall-delete' href="#">delete</button>
+        </div>
     </div>
 </div>
