--- a/yaapp/templates/yabase/app/radio/wallEvent.message.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.message.mustache
@@ -4,7 +4,9 @@
 <h2><a href='/app/profile/<% user_username %>/'><% user_name %></a></h2>
 <div class='wall-event-remove'>
     <button class='yabutton-small' href="#">report as spam</button>
+    <%#creator%>
     <button class='yabutton-small wall-delete' href="#">delete</button>
+    <%/creator%>
 </div>
 <p><% text %></p>
 <div class='date'><% formatted_start_date %></div>
