--- a/yaapp/templates/yabase/app/radio/radioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/radioPage.mustache
@@ -16,4 +16,22 @@
     </div>
     <div id='pagination'></div>
 </div>
+
+<div class="modal hide fade" id="modal-report-abuse">
+    <div class="modal-header">
+        <button class="close" data-dismiss="modal">×</button>
+        <h3>{% trans "Confirm report as abuse" %}</h3>
+    </div>
+    <div class="modal-body">
+        <p>{% trans "Do you really want to report this message as an abuse?" %}
+        </p>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn" data-dismiss="modal">{% trans "No thank you" %}</a>
+        <a href="#" class="btn btn-primary">{% trans "Yes i want" %}</a>
+    </div>
 </div>
+
+
+</div>
+
