--- a/yaapp/templates/yabase/app/radio/radioPage.mustache
+++ b/yaapp/templates/yabase/app/radio/radioPage.mustache
@@ -32,6 +32,20 @@
     </div>
 </div>
 
+<div class="modal hide fade" id="modal-delete-message">
+    <div class="modal-header">
+        <button class="close" data-dismiss="modal">×</button>
+        <h3>{% trans "Confirm delete message" %}</h3>
+    </div>
+    <div class="modal-body">
+        <p>{% trans "Do you really want to delete this message?" %}
+        </p>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn" data-dismiss="modal">{% trans "No thank you" %}</a>
+        <a href="#" class="btn btn-primary">{% trans "Yes i want" %}</a>
+    </div>
+</div>
 
 </div>
 
