--- a/yaapp/templates/yabase/app/radio/wallEvent.message.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.message.mustache
@@ -2,12 +2,14 @@
 <div class='wall-event-message'>
 <img class='user' src='<% user_picture %>' width='48px' height='48px'/>
 <h2><a href='/app/profile/<% user_username %>/'><% user_name %></a></h2>
+{% if request.user.is_authenticated %}
 <div class='wall-event-remove'>
-    <button class='yabutton-small' id='report-abuse-btn' href="#">report as spam</button>
+    <button class='yabutton-small' id='report-abuse-btn' href="#">{% trans "report as abusive" %}</button>
     <%#creator%>
-    <button class='yabutton-small wall-delete' href="#" id='delete-btn'>delete</button>
+    <button class='yabutton-small wall-delete' href="#" id='delete-btn'>{% trans "delete" %}</button>
     <%/creator%>
 </div>
+{% endif %}
 <p><% text %></p>
 <div class='date'><% formatted_start_date %></div>
 </div>
