--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2744,6 +2744,33 @@ ul .radio-with-stats-cells li {
     margin:55px 0px;
 }
 
+.friends-login-container {
+    text-align:center;
+}
+
+.friends-login-container .friends-login-p {
+    color:#575757;
+    font-size: 31px;
+    width:350px;
+    line-height:35px;
+    margin-left:300px;
+    margin-top:30px;
+    font-weight:bold;
+ }
+
+.friends-login-container button {
+    width:569px;
+    height:77px;
+    background-image:url('../app/images/common/btn-bg-77.png');
+    border:1px solid #a5a5a5;
+    border-radius:7px;
+    font-size: 29px;
+    color:#575757;
+    text-shadow:0px 1px white;
+    font-weight:bold;
+    margin:55px 0px;
+}
+
 /**
  * common items
  */
