--- a/yaapp/templates/yabase/app/favorites/favoritesPage.mustache
+++ b/yaapp/templates/yabase/app/favorites/favoritesPage.mustache
@@ -10,7 +10,7 @@
 <div class='span12 no-margin'>
 	<div class='favorites-login-container'>
 		<img src="/media/app/images/icon-star-big-blue.png">
-		<p class='favorites-login-p'>Connectez-vous pour afficher vos favoris.</p>
+		<p class='favorites-login-p'>Connectez-vous pour afficher vos amis.</p>
 		<button>Se connecter</button>
 		{% include "yabase/app/landing.html" %}
 	</div>
