--- a/yaapp/templates/yabase/app/friends/friendsPage.mustache
+++ b/yaapp/templates/yabase/app/friends/friendsPage.mustache
@@ -8,6 +8,11 @@
 </div>
 {% else %}
 <div class='span12 no-margin'>
-{% include "yabase/app/landing.html" %}
+	<div class='friends-login-container'>
+		<img src="/media/app/images/friends-icon-large.png">
+		<p class='friends-login-p'>Connectez-vous pour afficher vos amis.</p>
+		<button>Se connecter</button>
+		{% include "yabase/app/landing.html" %}
+	</div>
 </div>
 {% endif %}
