added hyperlink on programming page

--- a/yaapp/templates/yabase/app/programming/songInstanceCell.mustache
+++ b/yaapp/templates/yabase/app/programming/songInstanceCell.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <td><% metadata__name %></td>
-<td><% metadata__album_name %></td>
-<td><% metadata__artist_name %></td>
+<td><a href='#' class='album'><% metadata__album_name %></a></td>
+<td><a href='#' class='artist'><% metadata__artist_name %></a></td>
 <td>
     <button class='yabutton-small remove'>{% trans 'remove' %}</button
 </td>
