--- a/yaapp/templates/yabase/app/radio/wallEvent.like.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.like.mustache
@@ -1,9 +1,9 @@
 {% load i18n %}
-<div class='wall-event-message alert alert-success'>
+<div class='wall-event-message'>
 	<div class ='like-comment'>
 		<img src='/media/images/like.png' width='32px' height='32px'/>
 		<h2><a href='/app/profile/<% user_username %>/'><% user_name %></a> {% trans "likes" %} <% song_name %></h2>
-	</div>
 	<p><% text %></p>
-	<div class='date date-comment'><% formatted_start_date %></div>
+	<div class='date-like'><% formatted_start_date %></div>
+	</div>
 </div>
