--- a/yaapp/templates/yabase/app/radio/radio.mustache
+++ b/yaapp/templates/yabase/app/radio/radio.mustache
@@ -6,12 +6,12 @@
         <h1><% name %> {% trans "by" %} <a href='/app/profile/<%#creator%><% username %>/'><% name %><%/creator%></a></h1>
    {% if request.user.is_authenticated %}
    <a class="btn" id='btn-favorite'>
-    <i class="icon-star-empty"></i>
-    {% trans 'Add to favorite' %}
+    <img src='/media/app/images/star-small-white.png' />
+    <span>{% trans 'Add to favorite' %}</span>
    </a>
    <a class="btn" id='btn-unfavorite'>
-    <i class="icon-star"></i>
-    {% trans 'Remove from favorite' %}
+    <img src='/media/app/images/star-small-grey.png' />
+    <span>{% trans 'Remove from favorite' %}</span>
    </a>
    {% endif %}
    </div>
