--- a/yaapp/templates/yabase/app/radio/wallEvent.message.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.message.mustache
@@ -1,7 +1,6 @@
 {% load i18n %}
 <div class='wall-event-message'>
 <img class='user' src='<% user_picture %>' width='48px' height='48px'/>
-<h2><a href='/app/profile/<% user_username %>/'><% user_name %></a></h2>
 {% if request.user.is_authenticated %}
 <div class='wall-event-remove'>
     <button class='yabutton-small' id='report-abuse-btn' href="#"><i class="icon-thumbs-down"></i> {% trans "report as abusive" %}</button>
@@ -11,5 +10,5 @@
 </div>
 {% endif %}
 <p><% text %></p>
-<div class='date'><% formatted_start_date %></div>
+<h2><a href='/app/profile/<% user_username %>/'><% user_name %></a></h2><div class='date'><% formatted_start_date %></div>
 </div>
