--- a/yaapp/templates/yabase/app/track.mustache
+++ b/yaapp/templates/yabase/app/track.mustache
@@ -1,9 +1,9 @@
-{% load i18n %}  
+{% load i18n %}
 
 <div class="switch-container">
     <input type="checkbox"/>
     <span class='hd-bg' />
-</div>                              
+</div>
 <div id="radio-picto">
     <a href="{% url webapp_radio current_uuid %}" class='yatooltip'>
         <img id='track-image' src='<% cover %>' width="32" height="32" alt="Radio Picto">
@@ -24,11 +24,11 @@
 
     <div id='slider-container'>
         <div id='player-title'><% name %></div>
-        <span class="tooltip"></span>  
-        <div id="volume-slider"></div>  
-        <span class="volume"></span> 
+        <span class="tooltip"></span>
+        <div id="volume-slider"></div>
+        <span class="volume"></span>
     </div>
-    
+
     <div id="max-level">
         <img src="/media/app/images/higher-volume.png" width="11" height="11" alt="Higher Volume">
     </div>
@@ -38,15 +38,15 @@
 <div class="header-social-btn" id="first-social-btn">
     <a id="share-btn" data-toggle="modal" href="#modal-share" class='yatooltip-share'>
     <span class="yatoolelt-share">{% trans "Share" %}</span>
-    </a>    
-        
+    </a>
+
 </div>
 <div class="header-social-btn">
     <a href="#" id="love-btn" class='yatooltip-share'>
-        <span class="yatoolelt-share">{% trans "Like current song" %}</span>
+        <span class="yatoolelt-share">{% trans "Like song" %}</span>
     </a>
 </div>
-<div class="header-social-btn"> 
+<div class="header-social-btn">
     <a href="<% buy_link %>" id="shop-btn" class='yatooltip' target="_blank">
         <span class="yatoolelt">{% trans "Buy on iTunes" %}</span>
     </a>
