--- a/yaapp/templates/yabase/app/radio/radio.mustache
+++ b/yaapp/templates/yabase/app/radio/radio.mustache
@@ -3,16 +3,23 @@
        <img src="<% picture %>" width="210px" height="210px"/>
    </div>
    <div id='webapp-radio-title'>
-        <h1><% name %> {% trans "by" %} <a href='/app/profile/<%#creator%><% username %>/'><% name %><%/creator%></a></h1>
-   {% if request.user.is_authenticated %}
-   <a class="btn" id='btn-favorite'>
-    <img src='/media/app/images/star-small-white.png' />
-    <span>{% trans 'Add to favorite' %}</span>
-   </a>
-   <a class="btn" id='btn-unfavorite'>
-    <img src='/media/app/images/star-small-grey.png' />
-    <span>{% trans 'Remove from favorite' %}</span>
-   </a>
-   {% endif %}
+        <h1><% name %> {% trans "by" %} 
+          <a href='/app/profile/<%#creator%><% username %>/'><% name %><%/creator%></a>
+        </h1>
+        <div class='favorites-nbr-container'>  
+          <span class='favorites-nbr'>1453</span>
+          <img src="/media/app/images/star-small-gradient.png">
+          <div class='favorites-txt'>favorites</div>
+        </div>
+        {% if request.user.is_authenticated %}
+        <a class="btn" id='btn-favorite'>
+          <img src='/media/app/images/star-small-white.png' />
+          <span>{% trans 'Add to favorite' %}</span>
+        </a>
+        <a class="btn" id='btn-unfavorite'>
+          <img src='/media/app/images/star-small-grey.png' />
+          <span>{% trans 'Remove from favorite' %}</span>
+        </a>
+        {% endif %}
    </div>
    
