--- a/yaapp/templates/yabase/app/home/homePage.html
+++ b/yaapp/templates/yabase/app/home/homePage.html
@@ -1,29 +1,13 @@
+{% extends "yabase/webapp.html" %}
 {% load i18n %}
-<div class='row-fluid'>
-    <div class='span12'>
-        <h1>Homepage</h1>
-    </div>
-</div>    
-
-<div class='row-fluid'>
-    <div class='span12'>
-        <h2>{% trans "Selection" %}</h2>
-        <ul id='selected-radios'>
-        </ul>
-    </div>
-</div>    
-<div class='row-fluid'>
-    <div class='span12'>
-        <h2>{% trans "Most popular radios today" %}</h2>
-        <ul id='most-active-radios'>
+{% block content %}
+<div class='container' id='webapp-content'/>
+    <div>
+        <ul id='selected-radios' class='radio-cells'>
+            {% for radio in radios %}
+            <li>{% include 'yabase/app/radioCell.html' %}</li>
+            {% endfor %}
         </ul>
     </div>
 </div>
-<div class='row-fluid'>
-    <div class='span12'>
-        <h2>{% trans "My favorites" %}</h2>
-        <ul id='favorites'>
-        </ul>
-        <div class='cell-pagination' id='pagination'></div>
-    </div>
-</div>
+{% endblock %}
