--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -91,6 +91,7 @@
        var g_facebook_share_picture = '{{ facebook_share_picture}}';
        var g_facebook_share_link = '{{ facebook_share_link}}';
        var g_has_radios = {% if has_radios %}true{% else %}false{% endif %};
+       var g_page = '{{ g_page }}';
     </script>
 
 
@@ -362,7 +363,7 @@
 		</div>
 	</div>
 	</div>
-	<div id='submenu-container'></div>
+	<div id='submenu-container'>{% include 'yabase/app/common/subMenu.html' %}</div>
 
 <div class="modal hide fade" id="modal-share">
     <div class="modal-header">
