fixed user selection in radio page

--- a/yaapp/templates/yabase/app/radio/radio.mustache
+++ b/yaapp/templates/yabase/app/radio/radio.mustache
@@ -2,8 +2,8 @@
    <div id='webapp-radio-picture' class='thumbnail'>
        <img src="<% picture %>" width="210px" height="210px"/>
        <div id='webapp-title-radio'>
-          <h2><% name %> {% trans "by" %} 
-          <a href='/app/profile/<%#creator%><% username %>/'><% name %><%/creator%></a>
+          <h2><% name %> {% trans "by" %}
+          <a id='user' href='/app/profile/<%#creator%><% username %>/'><% name %><%/creator%></a>
           </h2>
        </div>
    </div>
