fixed top border on btn radio wall

--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -2001,6 +2001,7 @@ ul#notifications {
 
 #radio-actions-container .wall-first-child {
     border-radius:10px 10px 0px 0px;
+    border:none;
 }
 
 #radio-actions-container .wall-last-child {
