--- a/yaapp/templates/yabase/app/radioCell.mustache
+++ b/yaapp/templates/yabase/app/radioCell.mustache
@@ -3,11 +3,11 @@
 	<div class="radio-border" style='display:none;'>
 		<img src="/media/app/images/radio/radio-hover-border.png" alt="Radio Hover Border">
     </div>
-	<div class="radio-container">	
+	<div class="radio-container">
 		<div class='picture'>
-	    <img src='<% picture %>' width='210' height='210'/>
+	    <a href='/app/radio/<% uuid %>/'><img src='<% picture %>' width='210' height='210'/><a>
 	    </div>
-	
+
 		<div class='mask' style='display:none;'>
 			<div class="radio-icon">
 				<img src="/media/images/default_album.jpg" width="36" height="36" alt="Radio Radio Picture"/>
@@ -23,7 +23,7 @@
 				<div class="tag-right-side"></div>
 			</div>
 	    </div>
-    
+
 	    <div class="profile">
 	        <%#creator%>
 	        <img src='<% picture %>' width='32px' height='32px'/>
@@ -36,7 +36,7 @@
 	        <div class="caption-content">
 	            <h5><% name %></h5>
 	            <ul class="radio-favorites">
-	                <li><% favorites %></li>	
+	                <li><% favorites %></li>
 	                <li><% nb_current_users %></li>
 	            </ul>
 	        </div>
