--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -457,7 +457,7 @@
 			<img src="/media/app/images/separation.png" width="4" height="81" alt="separation"/>
 		</div>
 		<div id="minutes" class="blocks">
-			<span class="footer-text-color1" >0</span>
+			<span class="footer-text-color1" >{{ minutes }}</span>
 			<p class="footer-text-color2" >{% trans "minutes of music have been played" %}</p>
 		</div>
 	<p id="copyright">&copy; Yasound 2012</p>
