updated buttons and lists, added player id on menu icons

--- a/yaapp/templates/yabase/app/radio/radio.mustache
+++ b/yaapp/templates/yabase/app/radio/radio.mustache
@@ -25,10 +25,10 @@
         {% endif %}
    </div>
 	<ul id='radio-actions-container'>
-		<a class='wall-first-child' href="#"><li><img class='actions-btn' src="/media/app/images/radio/radio-icon-embed.png"/>intégrer la radio sur mon site</li></a>
-		<a href="#"><li class='wall-single-line'><img class='actions-btn' src="/media/app/images/radio/radio-icon-share.png"/>partager le titre</li></a>
-		<a href="#"><li class='wall-single-line'><img class='actions-btn' src="/media/app/images/radio/radio-icon-heart.png"/>j'aime le titre</li></a>
-		<a href="#"><li class='wall-single-line'><img class='actions-btn' src="/media/app/images/radio/radio-icon-settings.png"/>modifier les paramètres</li></a>
-		<a href="#"><li class='wall-single-line'><img class='actions-btn' src="/media/app/images/radio/radio-icon-music.png"/>mettre à jour la playlist</li></a>
-		<a class='wall-last-child' href="#"><li><img class='actions-btn' src="/media/app/images/radio/radio-icon-message.png"/>envoyer un message aux auditeurs</li></a>
+		<li class='wall-first-child'><a  href="#"><img class='actions-btn' src="/media/app/images/radio/radio-icon-embed.png"/>intégrer la radio sur mon site</a></li>
+		<li><a href="#"><img src="/media/app/images/radio/radio-icon-share.png"/>partager le titre</a></li>
+		<li><a href="#"><img src="/media/app/images/radio/radio-icon-heart.png"/>j'aime le titre</a></li>
+		<li><a href="#"><img src="/media/app/images/radio/radio-icon-settings.png"/>modifier les paramètres</a></li>
+		<li><a href="#"><img src="/media/app/images/radio/radio-icon-music.png"/>mettre à jour la playlist</a></li>
+		<li class='wall-last-child'><a href="#"><img src="/media/app/images/radio/radio-icon-message.png"/>envoyer un message aux auditeurs</a></li>
 	</ul>
