--- a/yaapp/media/css/webapp.css
+++ b/yaapp/media/css/webapp.css
@@ -477,7 +477,7 @@ body {
     padding-left:17px;
 }
 
-#share-btn {
+#player #share-btn {
     display:inline-block;
     float:left;
     height:18px;
@@ -485,7 +485,7 @@ body {
     background-image:url('../app/images/share-btn.png');
 }
 
-#share-btn:hover {
+#player #share-btn:hover {
     display:inline-block;
     float:left;
     height:18px;
@@ -493,7 +493,7 @@ body {
     background-image:url('../app/images/hover-share-btn.png');
 }
 
-#love-btn {
+#player #love-btn {
     display:inline-block;
     float:left;
     height:18px;
@@ -502,7 +502,7 @@ body {
     background-repeat:no-repeat;
 }
 
-#love-btn:hover {
+#player #love-btn:hover {
     display:inline-block;
     float:left;
     height:18px;
@@ -511,7 +511,7 @@ body {
     background-repeat:no-repeat;
 }
 
-#shop-btn {
+#player #shop-btn {
     display:inline-block;
     float:left;
     height:19px;
@@ -520,7 +520,7 @@ body {
     background-repeat:no-repeat;
 }
 
-#shop-btn:hover {
+#player #shop-btn:hover {
     display:inline-block;
     float:left;
     height:19px;
@@ -1981,22 +1981,22 @@ ul#notifications {
     margin-top:30px;
 }
 
-#radio-actions-container a {
+#radio-actions-container li {
     display:block;
     position:relative;
     height:41px;
     border-top:1px solid #b6b6b7;
 }
 
-#radio-actions-container li {
+#radio-actions-container a {
     display:block;
     padding-right:5px;
     list-style:none;
+    text-decoration: none;
     color:#727478;
     font-weight: bold;
     text-shadow:1px 1px white;
-    vertical-align: middle;
-    max-height:41px;
+    height:41px;
 }
 
 #radio-actions-container .wall-first-child {
@@ -2008,7 +2008,7 @@ ul#notifications {
     border-radius:0px 0px 10px 10px;    
 }
 
-#radio-actions-container a:hover {
+#radio-actions-container li:hover {
     background-image: linear-gradient(bottom, rgb(224,224,224) 10%, rgb(248,248,248) 55%);
     background-image: -o-linear-gradient(bottom, rgb(224,224,224) 10%, rgb(248,248,248) 55%);
     background-image: -moz-linear-gradient(bottom, rgb(224,224,224) 10%, rgb(248,248,248) 55%);
@@ -2018,14 +2018,13 @@ ul#notifications {
     text-decoration:none;
 }
 
-#radio-actions-container .actions-btn {
+#radio-actions-container img {
     float:left;
     margin:6px;
-    margin-right:10px;
 }
 
-#radio-actions-container .wall-single-line {
-    line-height:41px;
+#radio-actions-container a {
+    float:left;
 }
 
 /**
