--- a/yaapp/templates/yabase/app/radio/radio.mustache
+++ b/yaapp/templates/yabase/app/radio/radio.mustache
@@ -26,9 +26,9 @@
    </div>
 	<ul id='radio-actions-container'>
 		<li class='wall-first-child'><a  href="#"><img class='actions-btn' src="/media/app/images/radio/radio-icon-embed.png"/>intégrer la radio sur mon site</a></li>
-		<li><a href="#"><img src="/media/app/images/radio/radio-icon-share.png"/>partager le titre</a></li>
-		<li><a href="#"><img src="/media/app/images/radio/radio-icon-heart.png"/>j'aime le titre</a></li>
-		<li><a href="#"><img src="/media/app/images/radio/radio-icon-settings.png"/>modifier les paramètres</a></li>
-		<li><a href="#"><img src="/media/app/images/radio/radio-icon-music.png"/>mettre à jour la playlist</a></li>
+		<li><a href="#"><img src="/media/app/images/radio/radio-icon-share.png"/><span>partager le titre</span></a></li>
+		<li><a href="#"><img src="/media/app/images/radio/radio-icon-heart.png"/><span>j'aime le titre</span></a></li>
+		<li><a href="#"><img src="/media/app/images/radio/radio-icon-settings.png"/><span>modifier les paramètres</span></a></li>
+		<li><a href="#"><img src="/media/app/images/radio/radio-icon-music.png"/><span>mettre à jour la playlist</span></a></li>
 		<li class='wall-last-child'><a href="#"><img src="/media/app/images/radio/radio-icon-message.png"/>envoyer un message aux auditeurs</a></li>
 	</ul>
