fixed url in static subMenu.html

--- a/yaapp/templates/yabase/app/common/subMenu.html
+++ b/yaapp/templates/yabase/app/common/subMenu.html
@@ -39,7 +39,7 @@
                 <span>{% trans "Create radio" %}</span>
             </a>
             {% else %}
-            <a id="create-radio" href="{% url webapp_myradios %}">
+            <a id="create-radio" href="{% url webapp_radios %}">
                 <span>{% trans "My radios" %}</span>
             </a>
             {% endif %}
