added fuzzy search on programming page

--- a/yaapp/templates/yabase/app/programming/addFromServer.mustache
+++ b/yaapp/templates/yabase/app/programming/addFromServer.mustache
@@ -8,6 +8,11 @@
     <input type='submit' class='yabutton-small' id='find-btn' value='{% trans 'find' %}'/>
 </form>
 
+<form class="well form-inline">
+    <input type='text' id='find-fuzzy-input' placeholder='{% trans "Search input" %}'/>
+    <input type='submit' class='yabutton-small' id='find-fuzzy-btn' value='{% trans 'find' %}'/>
+</form>
+
 <table class="table table-bordered table-striped">
     <thead>
         <tr>
